# activity

./: .env.example  .env.yandex.example  .gitignore  S3_MIGRATION_GUIDE.md  STORAGE_SETUP.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  check_media_temp.py  check_storage.py  check_table_structure.py  create_packages.py  create_tags_and_categories.py  create_test_data.py  create_test_events.py  create_test_venues.py  data.json  debug_logging.py  download_fonts.py  generate_all_reports.py  pyproject.toml  race_condition_final_test.py  race_condition_test.py  race_condition_test_enhanced.py  requirements.txt  table_structure.txt  test_payment_success.py  test_race_condition.py  test_race_condition_django_client.py  test_race_condition_django_client_utf8.py  test_video_processing.py
activity/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/: admin.py  apps.py  backends.py  context_processors.py  document_storage.py  forms.py  image_storage.py  mixins.py  models.py  proxy_models.py  redis_utils.py  services.py  signals.py  storage.py  storage_backends.py  storage_docs.md  tasks.py  tests.py  utils.py  validators.py  video_storage.py  views.py
fixtures/: data.json
partner_app/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
payment/: urls.py  views.py
templates/: activate_account.html  base.html  buy_ticket.html  change_password.html  landing.html  moderator_dashboard.html  payment_success.html  refund_error.html  refund_success.html  refund_success_free.html  support_dashboard.html
venues/: admin.py  (+7 more)
(+255 files in other folders)
