[project]
name = "activity"
version = "0.1.0"
description = ""
authors = [
    {name = "ToHellForever",email = "dim.anosoff2018@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "moviepy (>=2.2.1,<3.0.0)",
    "django-taggit (>=6.1.0,<7.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-crispy-forms (>=2.6,<3.0)",
    "django-bootstrap5 (>=26.2,<27.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
